Got the gap problem figured out. Helpful tip - use "display: none;" to narrow down which section is causing issues. Just need to fix L laptop view.

--- a/style.css
+++ b/style.css
@@ -444,6 +444,7 @@ i {
 
 .bottomSection {
     padding-bottom: 0px;
+    padding-top: 0px;
 }
 
 .bottomSection a {
@@ -579,7 +580,7 @@ footer {
     }
 }
 
-/* Responsiveness for main site starts here */
+/* Responsiveness for other screen sizes starts here */
 
 @media screen and(max-width: 1140px) {
     .container {
@@ -676,7 +677,7 @@ footer {
     }
 
     header nav:hover ul {
-        right: 0;
+        right: -15px;
     }
 
     header nav ul li {
@@ -801,7 +802,8 @@ footer {
     #servicesOffered .serviceCards {
         
         justify-content: center;
-        width: fit-content;
+        width: 100%;
+        height: 100%;
     }
 
     #servicesOffered .serviceCards .imageToggle {
@@ -818,7 +820,9 @@ footer {
 
     #classesOffered {
         display: flex;
+        width: 100%;
         flex-direction: row;
+        height: 100%;
     }
 
     #classesOffered .cards > div:hover {
@@ -834,13 +838,30 @@ footer {
         max-width: 100%;
         gap: 5px;
         justify-content: center;
+        height: 100%;
     }
 
     #classesOffered .cards > div {
         margin: 10px 0;
         align-items: center;
     }
+
+    #classesOffered .container {
+        margin-top: 0px;
+        margin-bottom: 0px;
+        height: 100%;
+        width: 100%;
+    }
     /* classesOffered Section Ends */
+
+    /* testimonies section starts */
+
+    #testimonies {
+        margin-top: 0px;
+        height: 100%;
+    }
+
+    /* testimonies section ends */
 
     /* Footer Section Starts Here */
 
@@ -894,6 +915,28 @@ footer {
     /* Footer Section Ends Here */
 }
 
+@media screen and (max-width: 704px) {
+
+    #servicesOffered{
+        height: 100%;
+    }
+
+    #classesOffered .cards {
+        height: 100%;
+        
+    }
+    #classesOffered .container {
+        width: 100%;
+        padding-bottom: 200px;
+    }
+
+    #testimonies {
+        display: flex;
+        margin-top: 0px;
+        height: 100%;
+    }
+}
+
 @media screen and (max-width: 425px) {
 
     /* Navigation Section Starts Here */
@@ -920,6 +963,7 @@ footer {
         right: -400px;
         top: 53px;
         transition: 0.5s;
+        width: 200px;
     }
 
     /* Navigation Section Ends Here */
@@ -1134,19 +1178,23 @@ footer {
     /* Footer Section Ends Here */
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 375px) {
 
     header {
         display: flex;
-    
+        position: none;
     }
 
     header .container {
         display: flex;
     }
 
-    #serviceOffered {
-        width: 100%;
+    header nav ul li a {
+        width: 200px;
+    }
+
+    #servicesOffered {
+        padding-top: 100px;
     }
 
     #servicesOffered .container {
@@ -1154,16 +1202,17 @@ footer {
     }
     
     #servicesOffered .serviceCards{
-        background-color: red;
         height: 100%;
     }
 
     #servicesOffered .serviceCards > div {
         width: 100%;
+        padding-bottom: 100px;
     }
 
     #classesOffered {
-        height: 3500px;
+        height: 100%;
+        padding-top: 0px;
     }
 
     #classesOffered .cards {
@@ -1171,6 +1220,8 @@ footer {
         width: 100%;
         justify-content: center;
         height: 100%;
+        padding: 10px;
+        gap: 10px;
     }
 
     #classesOffered .cards > div {
@@ -1181,6 +1232,7 @@ footer {
     
     #classesOffered .container {
         width: 100%;
+        padding-bottom: 20px;
     }
 
     .container {
@@ -1190,6 +1242,7 @@ footer {
     #gettingStarted .startingCards {
         display: flex;
         width: 100%;
+        height: 100%;
 
     }
 
@@ -1199,6 +1252,21 @@ footer {
 
     .bottomSection {
         padding: 0px 0px;
+    }
+
+    #gettingStarted .startingCards > div {
+        width: 100%;
+    }
+
+    #gettingStarted .startingCards > div p {
+        width: 100%;
+    }
+
+    #gettingStarted {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+
     }
 
 
